--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -194,62 +194,76 @@ body {
 	opacity: 0.5;
 }
 
-.shop {
-	display: none;
+.shop-menu h1 {
+	font-size: 35px;
+	margin: 5px;
+	margin-left: 10px;
+	font-family: profont;
+	text-align: center;
+	border-bottom: 3px solid #000;
+}
+
+.shop-menu .shop-item {
 	position: relative;
-	width: 100%;
-	top: 100%;
-	background-color: rgba(0, 0, 0, 0.9);
+	width: 230px;
+	height: 70px;
+	margin-left: 15px;
+	border-bottom: 2px solid rgba(0, 0, 0, 0.15);
+}
+
+.shop-menu .shop-item:active {
+	opacity: 0.8;
+}
+
+.shop-menu .shop-item img {
+	width: 50px;
+	height: 50px;
+	margin-top: 8px;
+}
+
+.shop-menu .shop-item .desc {
+	display: inline-block;
+	margin-top: 3px;
+	margin-left: 15px;
+	height: 100%;
+	text-align: left;
+	font-size: 25px;
+	font-family: bigfont;
+	vertical-align: top;
+}
+
+.shop-menu .shop-item .desc .name {
+	font-family: bigfont;
+	font-size: 20px;
+}
+
+.shop-menu .shop-item .desc .more {
+	font-family: profont;
+	font-size: 16px;
+}
+
+.shop-menu .shop-item .cost {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	height: 100%;
+	vertical-align: top;
+	margin-top: 12px;
+	margin-left: 20px;
+	font-size: 28px;
+	font-family: profont;
+}
+
+.shop-menu .shop-item .amount {
+	position: absolute;
+	left: 0px;
+	bottom: -2px;
+	width: 50px;
+	font-size: 14px;
+	font-family: profont;
 	text-align: center;
 }
 
 .light {
 	opacity: 0.3;
-}
-
-.shop-item {
-	position: relative;
-	display: inline-block;
-	width: 100%;
-	height: 120px;
-	border-bottom: 2px solid rgba(255, 255, 255, 0.3);
-	font-family: profont;
-	color: #fff;
-	user-select: none;
-}
-
-.shop-item:active {
-	background-color: rgba(255, 255, 255, 0.4);
-}
-
-.shop-item img {
-	width: 75px;
-	height: 75px;
-	margin-top: 20px;
-	margin-left: 15px;
-	margin-right: 20px;
-	float: left;
-}
-
-.shop-item .item-desc {
-	float: left;
-	margin-top: 23px;
-	text-align: left;
-	word-wrap: break-word;
-}
-
-.shop-item .item-title {
-	font-size: 25px;
-	font-family: bigfont;
-}
-
-.shop-item .item-info {
-	font-size: 20px;
-}
-
-.shop-item .item-amount {
-	position: absolute;
-	top: 95px;
-	left: 85px;
-	font-size: 20px;
 }
