--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -225,7 +225,7 @@ body {
 }
 
 .shop-menu .shop-item:active {
-	opacity: 0.8;
+	background-color: rgba(0, 0, 0, 0.06);
 }
 
 .shop-menu .shop-item img {
@@ -253,6 +253,7 @@ body {
 .shop-menu .shop-item .desc .more {
 	font-family: profont;
 	font-size: 16px;
+	color: rgba(0, 0, 0, 0.65);
 }
 
 .shop-menu .shop-item .cost {
