--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -301,9 +301,10 @@ body {
 }
 
 .shop-menu h1 {
+	width: 280px;
 	font-size: 35px;
 	margin: 5px;
-	margin-left: -90px;
+	margin-left: 0px;
 	font-family: profont;
 	text-align: center;
 	border-bottom: 3px solid #000;
