Remove automatic alert

--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -348,6 +348,7 @@ body {
 	height: 30px;
 	padding-top: 5px;
 	margin-left: 16px;
+	margin-bottom: 7px;
 	text-align: center;
 	font-family: profont;
 	font-size: 25px;
