--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -194,6 +194,7 @@ body {
 	height: 40px;
 	margin-top: 5px;
 	margin-left: 5px;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .alert .header p {
