--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -159,6 +159,14 @@ body {
 	right: 0px;
 	height: 50px;
 	background-color: rgba(0, 0, 0, 0.5);
+	font-family: profont;
+	font-size: 25px;
+	color: rgba(255, 255, 255, 0.4);
+}
+
+.ad p {
+	margin-top: 12px;
+	margin-left: 38px;
 }
 
 .overlay {
