--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -381,6 +381,7 @@ body {
 	margin-left: 0px;
 	font-family: profont;
 	text-align: center;
+	padding-bottom: 3px;
 	border-bottom: 3px solid #000;
 }
 
