--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -376,12 +376,11 @@ body {
 
 .shop-menu h1 {
 	width: 280px;
-	font-size: 35px;
-	margin-top: 5px;
-	font-family: profont;
-	text-align: center;
-	padding-bottom: 3px;
-	border-bottom: 3px solid #000;
+    font-size: 35px;
+    font-family: profont;
+    text-align: center;
+    border-bottom: 3px solid #000;
+    border-top: 3px solid #000;
 }
 
 .shop-menu .shop-item {
@@ -407,7 +406,7 @@ body {
 
 .shop-menu .shop-item .desc {
 	display: inline-block;
-	margin-top: 8px;
+	margin-top: 7px;
 	margin-left: 20px;
 	height: 100%;
 	text-align: left;
