--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -53,6 +53,115 @@ body {
 	background: transparent;
 }
 
+.starbust-wheel {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	width: 750px;
+	height: 750px;
+	left: -50%;
+	border-radius: 50%;
+	overflow: hidden;
+	animation: spin 60s infinite linear;
+}
+.starbust-wheel > li {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 50%;
+	height: 50%;
+	padding: 0;
+	margin: 0;
+	transform-origin: 0 0;
+}
+.starbust-wheel > li:nth-child(odd) {
+	background-image: linear-gradient(-197deg, rgba(38, 143, 224, 1) 5%, transparent 50%);
+}
+
+.starbust-wheel > li:nth-child(1) {
+    transform: rotate(18deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(2) {
+    transform: rotate(36deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(3) {
+    transform: rotate(54deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(4) {
+    transform: rotate(72deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(5) {
+    transform: rotate(90deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(6) {
+    transform: rotate(108deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(7) {
+    transform: rotate(126deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(8) {
+    transform: rotate(144deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(9) {
+    transform: rotate(162deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(10) {
+    transform: rotate(180deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(11) {
+    transform: rotate(198deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(12) {
+    transform: rotate(216deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(13) {
+    transform: rotate(234deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(14) {
+    transform: rotate(252deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(15) {
+    transform: rotate(270deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(16) {
+    transform: rotate(288deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(17) {
+    transform: rotate(306deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(18) {
+    transform: rotate(324deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(19) {
+	transform: rotate(342deg) skewX(72deg);
+}
+.starbust-wheel > li:nth-child(20) {
+	transform: rotate(360deg)  skewX(72deg);
+}
+
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(359deg);
+		transform: rotate(359deg);
+	}
+}
+
+@keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(359deg);
+		transform: rotate(359deg);
+	}
+}
+
 .bg {
 	overflow: hidden;
 	width: 100%;
