--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -57,13 +57,16 @@ body {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	position: relative;
+	position: absolute;
 	width: 750px;
 	height: 750px;
-	left: -50%;
+	top: 50%;
+	left: 50%;
+	margin: -375px 0 0 -375px;
 	border-radius: 50%;
 	overflow: hidden;
-	animation: spin 60s infinite linear;
+	animation: spin 80s infinite linear;
+	z-index: -10;
 }
 .starbust-wheel > li {
 	position: absolute;
@@ -166,7 +169,7 @@ body {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
-	z-index: -1;
+	z-index: -10;
 }
 
 .bg img {
