--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -64,6 +64,15 @@ time, mark, audio, video {
 	}
 }
 
+@keyframes shopflip {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
 body {
 	/* Background color for shop */
 	background-color: #2280BA;
@@ -428,6 +437,10 @@ body {
 	width: 50px;
 	height: 50px;
 	margin-top: 8px;
+}
+
+.shop-menu .shop-item .flip {
+	animation: shopflip 0.5s infinite linear;
 }
 
 .shop-menu .shop-item .desc {
