--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -440,7 +440,7 @@ body {
 }
 
 .shop-menu .shop-item .flip {
-	animation: shopflip 0.5s infinite linear;
+	animation: shopflip 0.5s;
 }
 
 .shop-menu .shop-item .desc {
