--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -91,6 +91,23 @@ time, mark, audio, video {
 	}
 }
 
+@keyframes addmove {
+	0% {
+		left: 5px;
+		opacity: 0;
+	}
+	20% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	100% {
+		left: 40%;
+		opacity: 0;
+	}
+}
+
 body {
 	/* Background color for shop */
 	background-color: #2280BA;
@@ -213,8 +230,11 @@ body {
 	font-family: bigfont;
 	font-size: 20px;
 	color: #47ce29;
-	opacity: 0;
 	text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+}
+
+.added-animate {
+	animation: addmove 3s linear;
 }
 
 .overlay {
@@ -330,7 +350,7 @@ body {
 }
 
 .vid-img:active {
-	width: 41px;
+	transform: scale(0.9, 0.9);
 }
 
 .vid-animate {
@@ -370,7 +390,7 @@ body {
 }
 
 .shop-img:active {
-	width: 46px;
+	transform: scale(0.9, 0.9);
 }
 
 .shop-container {
@@ -400,9 +420,7 @@ body {
 }
 
 .shop-menu .settings-img:active {
-	width: 26px;
-	top: 7px;
-	left: 243px;
+	transform: scale(0.85, 0.85);
 }
 
 .shop-menu .settings {
@@ -442,17 +460,17 @@ body {
 
 .shop-menu .shop-item {
 	position: relative;
-	width: 260px;
-	height: 70px;
-	margin-left: 0px;
-	padding-left: 15px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-	font-size: 11px !important;
-	user-select: none;
+    width: 290px;
+    height: 70px;
+    margin-left: -10px;
+    padding-left: 25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    user-select: none;
 }
 
 .shop-menu .shop-item:active {
-	font-size: 11.5px !important;
+	transform: scale(0.95, 0.95);
+	box-shadow: inset 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .shop-menu .shop-item img {
@@ -479,6 +497,7 @@ body {
 .shop-menu .shop-item .desc .name {
 	font-family: pixel;
 	font-weight: bold;
+	font-size: 11px;
 }
 
 .shop-menu .shop-item .desc .more {
@@ -501,7 +520,7 @@ body {
 
 .shop-menu .shop-item .amount {
 	position: absolute;
-	left: 22px;
+	left: 35px;
 	bottom: 0px;
 	width: 50px;
 	font-size: 14px;
