--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -487,6 +487,7 @@ body {
 	width: 55px;
 	height: 55px;
 	margin-top: 5px;
+	filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5));
 }
 
 .shop-menu .shop-item .flip {
