--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -78,7 +78,7 @@ time, mark, audio, video {
 	}
 }
 
-@keyframes vidzoom {
+@keyframes popzoom {
 	0% {
 		transform: scale(1, 1);
 	}
@@ -347,6 +347,10 @@ body {
 	display: block;
 }
 
+.pop-animate {
+	animation: popzoom 0.8s;
+}
+
 .vid-img {
 	position: fixed;
 	bottom: 135px;
@@ -358,10 +362,6 @@ body {
 
 .vid-img:active {
 	transform: scale(0.9, 0.9);
-}
-
-.vid-animate {
-	animation: vidzoom 0.8s;
 }
 
 .vid-reward {
