--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -559,13 +559,18 @@ body {
 .shop-menu .about {
 	position: absolute;
     right: 75px;
-    bottom: 5px;
-    width: 15px;
-    height: 15px;
+    top: 47px;
+    width: 18px;
+    height: 18px;
 	opacity: 0.8;
 }
 
+.shop-menu .about:active {
+	transform: scale(0.8, 0.8);
+}
+
 .shop-menu .about-desc {
+	display: none;
 	position: absolute;
     top: 75px;
     left: 15px;
