--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -113,16 +113,28 @@ time, mark, audio, video {
 		height: 80px;
 	}
 	100% {
-		height: 130px;
+		height: 135px;
 	}
 }
 
 @keyframes retract {
 	0% {
-		height: 130px;
+		height: 135px;
 	}
 	100% {
 		height: 80px;
+	}
+}
+
+@keyframes disappear {
+	0% {
+		transform: scale(1, 1);
+	}
+	20% {
+		transform: scale(1.2, 1.2);
+	}
+	100% {
+		transform: scale(0, 0);
 	}
 }
 
@@ -493,8 +505,7 @@ body {
 }
 
 .shop-menu .settings p:active {
-	opacity: 0.5;
-	border: 2px solid rgba(0, 0, 0, 0.4);
+	transform: scale(0.95, 0.95);
 }
 
 .shop-menu .settings .text {
@@ -512,6 +523,47 @@ body {
     text-align: center;
     border-bottom: 3px solid #000;
     border-top: 3px solid #000;
+}
+
+.shop-menu .center-collect {
+	position: relative;
+	width: 269px;
+	height: 33px;
+	border: 3px solid rgba(0, 0, 0, 0.8);
+	font-family: profont;
+	font-size: 17px;
+}
+
+.shop-menu .center-collect:active {
+	transform: scale(0.95, 0.95);
+}
+
+.shop-menu .center-collect .text {
+	text-align: center;
+	margin-top: 5px;
+}
+
+.shop-menu .center-collect .progress-bar-bg {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	height: 4px;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.shop-menu .center-collect .progress-bar {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	height: 4px;
+	width: 0%;
+	background-color: #0fbc7d;
+}
+
+.shop-menu .disappear {
+	animation: disappear 0.5s;
+	animation-fill-mode: forwards;
 }
 
 .shop-menu .shop-item {
