--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -586,7 +586,7 @@ body {
 	width: 55px;
 	height: 55px;
 	margin-top: 12px;
-    transform: translateZ(0);
+    transform: translate3d(0,0,0);
 	filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5));
 }
 
