--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -527,9 +527,9 @@ body {
 
 .shop-menu .center-collect {
     position: relative;
-    width: 269px;
+    width: 270px;
     height: 27px;
-    border: 3px solid rgba(0, 0, 0, 0.8);
+    border: 2px solid #000;
     font-family: profont;
     font-size: 16px;
 }
