--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -276,7 +276,7 @@ body {
 	bottom: 5px;
 	left: 8px;
 	font-family: bigfont;
-	font-size: 19px;
+	font-size: 35px;
 	color: #fff;
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 	text-decoration: none;
@@ -300,7 +300,7 @@ body {
 .added {
 	display: none;
 	position: fixed;
-	bottom: 50px;
+	bottom: 65px;
 	left: 5px;
 	font-family: bigfont;
 	font-size: 20px;
@@ -362,6 +362,7 @@ body {
 	font-family: profont;
 	font-size: 19px;
 	padding: 10px;
+    padding-top: 9px;
 }
 
 .alert .exit {
@@ -456,7 +457,7 @@ body {
 	right: 6px;
 	width: 50px;
 	height: auto;
-	filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.4));
+	filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.6));
 }
 
 .shop-img:active {
