--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -189,6 +189,7 @@ body {
 }
 
 .bg {
+    position: fixed;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
@@ -205,16 +206,16 @@ body {
 	animation: spin 80s infinite linear;
 }
 
+.canvas-container {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+}
+
 .canvas {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-	-webkit-transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
+    display: inline-block;
 	transform: translateZ(0);
 	/*box-shadow: inset 0 0 200px #0B5888;*/
 }
