--- a/www/styles/styling.css
+++ b/www/styles/styling.css
@@ -504,7 +504,7 @@ body {
 	overflow: hidden;
 }
 
-.shop-menu .settings p {
+.shop-menu .settings p:not(.nostyle) {
 	width: 237px;
 	height: 30px;
 	padding-top: 5px;
@@ -516,7 +516,7 @@ body {
 	border: 2px solid #000;
 }
 
-.shop-menu .settings p:active {
+.shop-menu .settings p:not(.nostyle):active {
 	transform: scale(0.95, 0.95);
 }
 
@@ -542,11 +542,15 @@ body {
 .shop-menu h1 {
 	width: 280px;
 	background-color: #fff;
-    font-size: 35px;
-    font-family: profont;
+    font-size: 30px;
+    font-family: pixel;
     text-align: center;
     border-bottom: 3px solid #000;
     border-top: 3px solid #000;
+}
+
+.shop-menu h1 p {
+    margin-top: 5px;
 }
 
 .shop-menu .center-collect {
